--- a/ship-now.html
+++ b/ship-now.html
@@ -35,7 +35,8 @@
     <section class="ship-now">
         <div class="container">
             <h2>Ship Now</h2>
-            <form id="ship-form">
+            <form id="ship-form" action="https://api.web3forms.com/submit" method="POST">
+                <input type="hidden" name="access_key" value="47b4cfaf-3bc3-48f6-ad4c-3fb6a91ed44f">
                 <div class="form-group">
                     <label for="origin-country">Origin Country</label>
                     <select id="origin-country" name="origin-country" required>
