--- a/customer-service.html
+++ b/customer-service.html
@@ -42,6 +42,7 @@
             </div>
             <form id="email-form" action="https://api.web3forms.com/submit" method="POST">
                 <input type="hidden" name="access_key" value="47b4cfaf-3bc3-48f6-ad4c-3fb6a91ed44f">
+                <input type="hidden" name="redirect" value="">
                 <h3>Contact Us via Email</h3>
                 <div class="form-group">
                     <label for="email">Your Email</label>
