--- a/Contact.html
+++ b/Contact.html
@@ -54,7 +54,7 @@
                 <h3>Contact Form</h3>
                 <form id="contact-form" action="https://api.web3forms.com/submit" method="POST">
                     <input type="hidden" name="access_key" value="47b4cfaf-3bc3-48f6-ad4c-3fb6a91ed44f">
-                    <input type="hidden" name="redirect" value="">
+                    <input type="hidden" name="redirect" value="https://shipping-psi.vercel.app/">
                     <div class="form-group">
                         <label for="name">Your Name</label>
                         <input type="text" id="name" name="name" placeholder="Enter your name" required>
