--- a/ship-now.html
+++ b/ship-now.html
@@ -37,7 +37,7 @@
             <h2>Ship Now</h2>
             <form id="ship-form" action="https://api.web3forms.com/submit" method="POST">
                 <input type="hidden" name="access_key" value="47b4cfaf-3bc3-48f6-ad4c-3fb6a91ed44f">
-                <input type="hidden" name="redirect" value="">
+                <input type="hidden" name="redirect" value="https://shipping-psi.vercel.app/">
                 <div class="form-group">
                     <label for="origin-country">Origin Country</label>
                     <select id="origin-country" name="origin-country" required>
